force-app/main/default/objects/PDRI__Relationship__c/PDRI__Relationship__c.object-meta.xml
<CustomObject>
    <description>Defines how a relationship should be handled during data migration.</description>
    <label>Relationship</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>