force-app/main/default/objects/PDRI__Relationship__c/fields/PDRI__Deployment_Order_Child__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Order_Child__c</fullName>
    <label>Deployment Order Child</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>