force-app/main/default/objects/PDRI__Relationship__c/fields/PDRI__Ignore_Query_Filter__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Ignore_Query_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Query Filter</label>
    <type>Checkbox</type>
</CustomField>