force-app/main/default/objects/PDRI__Relationship__c/fields/PDRI__ParentDataSet__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ParentDataSet__c</fullName>
    <description>Data set for the parent object.</description>
    <inlineHelpText>Enter date set for the parent object.</inlineHelpText>
    <label>Parent Data Set</label>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipLabel>Child Relationships</relationshipLabel>
    <relationshipName>ChildRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>