force-app/main/default/objects/PDRI__Relationship__c/fields/PDRI__Stub_Enable__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Stub_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Relationship Processing</label>
    <type>Checkbox</type>
</CustomField>